src/app/header/header.component.css
mat-toolbar {
  margin: 2px;
  background: #002b5c;
  color: white;
  height: 50px;
}

mat-sidenav {
  margin: 10px;
  width: 250px;
  border-right: none;
  background: #002b5c;
  color: white;
  border-radius: 10px;
  padding: 10px;
  text-align: center;
}

.content {
  height: calc(100vh - 98px);
  border-radius: 10px;
  margin: 14px;
  margin-left: 26px;
  padding: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  /* color: lightgray; */
  overflow-x: hidden;
  overflow-y: hidden !important;
}

mat-sidenav-container {
  height: calc(100vh - 65px);
}

.menu-button {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  /* font-size: 1rem; */
}
mat-icon {
  margin-right: 8px;
}
.avatar {
  margin-top: 10px;
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.name {
  margin-top: 4px;
  font-weight: normal;
  height: 10px;
}
.designation {
  /* font-size: 0.7rem; */
  color: lightgrey;
}

mat-divider {
  margin-top: 10px;
  margin-bottom: 10px;
  background-color: rgba(255, 255, 255, 0.5);
}
.appDiv {
  
  margin-left: 25px;
}

.mat-form-field + .mat-form-field {
  margin-left: 8px;
}

mat-expanded-panel {
  width: 100%;
  align-items: center;
  justify-content: flex-start;
  font-size: 1rem;
  background: #002b5c;
}

.example-spacer {
  flex: 1 1 auto;
}
mat-expansion-panel{
  /* background-color: #002b5c; */
  background: #002b5c;
  color: white;
}
mat-expansion-panel-header mat-panel-title{
  color: white;
}

